# 20231079_20231087_20230348

./: 3x3X_O.h  BoardGame_Classes.h  CMakeLists.txt  Four-in-a-row.h  MinMaxPlayer.h  Numerical Tic-Tac-Toe.h  Numerical-Tic-Tac-Toe.h  Pyramid_X_O.h  Pyramid_X_O_Smart_Player.h  SUS_X_O.h  Tic_tac_toe5_board.h  Ultimate Tic Tac Toe .h  Ultimate_Try.h  board.h  four_in_row_board.h  game3.h  game6.h  game6_tic_tac_toe.h  main.cpp  managegame.h  numerical_tic_tac_toe_board.h  player.h
